Closed
Bug 526286
Opened 16 years ago
Closed 16 years ago
Detaching a tab by dragging it down into its content area stopped working
Categories
(Core :: DOM: Copy & Paste and Drag & Drop, defect, P2)
Core
DOM: Copy & Paste and Drag & Drop
Tracking
()
VERIFIED
FIXED
mozilla1.9.3a1
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | beta2-fixed |
People
(Reporter: bzbarsky, Assigned: smaug)
References
Details
(Keywords: regression, verified1.9.2)
Attachments
(3 files)
|
2.19 KB,
patch
|
enndeakin
:
review+
sicking
:
superreview+
|
Details | Diff | Splinter Review |
|
2.43 KB,
patch
|
Details | Diff | Splinter Review | |
|
4.82 KB,
patch
|
Details | Diff | Splinter Review |
This is a regression from bug 508479 (based on regression date range and observed behavior). I was somewhat unpleasantly surprised by it when I updated, since now the only way to detach a tab is to drag it completely out of the window; in particular if the browser happens to be maximized there's no way to detach a tab at all.
Flags: blocking1.9.2?
Comment 1•16 years ago
|
||
also confirmed in 1.9.2 nightlies.
| Assignee | ||
Updated•16 years ago
|
Assignee: nobody → Olli.Pettay
Comment 2•16 years ago
|
||
windows build is not working also
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.2b2pre) Gecko/20091103 Namoroka/3.6b2pre ID:20091103045100
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.3a1pre) Gecko/20091103 Minefield/3.7a1pre ID:20091103044839
| Assignee | ||
Comment 3•16 years ago
|
||
Yeah, I know what caused this. Just updating my build and will upload
a (hopefully) trivial patch.
| Assignee | ||
Comment 4•16 years ago
|
||
Bring back the old behavior of nsContentAreaDragDrop, but
don't dispatch non-prevented-drops to content.
Attachment #410028 -
Flags: superreview?(jonas)
Attachment #410028 -
Flags: review?(enndeakin)
| Assignee | ||
Comment 5•16 years ago
|
||
No automatic tests for this, not at least today.
Comment on attachment 410028 [details] [diff] [review]
patch
Needs tests!
Attachment #410028 -
Flags: superreview?(jonas) → superreview+
| Assignee | ||
Comment 7•16 years ago
|
||
A bit hackish test, based on just the flags dragsession have.
Updated•16 years ago
|
Attachment #410028 -
Flags: review?(enndeakin) → review+
Comment 8•16 years ago
|
||
Blocking on this blocker regression.
Flags: blocking1.9.2? → blocking1.9.2+
Priority: -- → P2
Target Milestone: --- → mozilla1.9.2
Updated•16 years ago
|
Flags: in-litmus?
| Assignee | ||
Comment 9•16 years ago
|
||
| Assignee | ||
Comment 10•16 years ago
|
||
| Assignee | ||
Comment 11•16 years ago
|
||
Updated•16 years ago
|
OS: Mac OS X → All
Hardware: x86 → All
Comment 13•16 years ago
|
||
Olli, are the tests complete then?
Flags: in-testsuite?
Target Milestone: mozilla1.9.2 → mozilla1.9.3a1
| Assignee | ||
Comment 14•16 years ago
|
||
Some better tests would be good, but the tests I pushed do check for this
particular regression.
Comment 15•16 years ago
|
||
Thanks so we are ok here. Also the following litmus test covers this particular issue: https://litmus.mozilla.org/show_test.cgi?id=9252
Flags: in-testsuite?
Flags: in-testsuite+
Flags: in-litmus?
Flags: in-litmus+
Comment 16•16 years ago
|
||
Verified fixed on the 1.9.2 branch using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.2b2pre) Gecko/20091106 Namoroka/3.6b2pre. Also checked equivalent builds on Windows 7, Windows Vista, Mac 10.4 and 10.5
Whiteboard: verified1.9.2
Comment 17•16 years ago
|
||
Looks good on trunk too with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.3a1pre) Gecko/20091106 Minefield/3.7a1pre ID:20091106102904
Fixing keyword...
You need to log in
before you can comment on or make changes to this bug.
Description
•