 Bug 526286 -  Detaching a tab by dragging it down into its content area stopped working, r=enndeakin, sr=jonas