content/events/src/nsEventStateManager.cpp
@@ -3133,7 +3133,8 @@ nsEventStateManager::PostHandleEvent(nsPresContext* aPresContext,
             !(aEvent->flags & NS_EVENT_FLAG_NO_DEFAULT_CALLED_IN_CONTENT));
         }
       } else if (aEvent->message == NS_DRAGDROP_OVER && !isChromeDoc) {
-        dragSession->SetCanDrop(PR_FALSE);
+        // No one called preventDefault(), so handle drop only in chrome.
+        dragSession->SetOnlyChromeDrop(PR_TRUE);
       }
 
       // now set the drop effect in the initial dataTransfer. This ensures
